@@ -694,8 +694,3 @@ background-color:#f6f6f6;
 	height:16px !important;
 }
 
-.cal-date-picker-wrap{
-	width:210px;
-	margin:auto;
-	margin-bottom: 4px;
-}
